--- a/package.json
+++ b/package.json
@@ -8,15 +8,26 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "~10.0.3",
     "expo": "~37.0.3",
+    "expo-font": "^8.1.1",
+    "npm": "^6.14.5",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
-    "react-native-web": "~0.11.7"
+    "react-native-gesture-handler": "~1.6.0",
+    "react-native-paper": "~2.16.0",
+    "react-native-reanimated": "~1.7.0",
+    "react-native-screens": "~2.2.0",
+    "react-native-web": "~0.11.4",
+    "react-navigation": "~3.11.1",
+    "react-navigation-header-buttons": "~3.0.1",
+    "react-navigation-material-bottom-tabs": "~1.0.0",
+    "start": "^5.1.0"
   },
   "devDependencies": {
-    "babel-preset-expo": "~8.1.0",
-    "@babel/core": "^7.8.6"
+    "@babel/core": "^7.8.6",
+    "babel-preset-expo": "~8.1.0"
   },
   "private": true
 }
